--- a/app/views/student_review/_responses.html.erb
+++ b/app/views/student_review/_responses.html.erb
@@ -34,7 +34,7 @@
             <td>&nbsp;</td>
             <% if !map.response.empty? && latest_submission %>
                 <% array_not_empty = 0 %>
-                <% @sorted_responses = Array.new %>
+                <% @sorted_responses = [] %>
                 <% @prev = Response.where(:map_id => map.id) %>
                 <% for element in @prev %>
                     <% array_not_empty = 1 %>
@@ -54,7 +54,13 @@
                     <% current_round = @assignment.number_of_current_round(topic_id) %>
 
                     <td>
+                        <% if review_no == 1 %>
+                          <%= "  "%>
+                        <% end %>
                         <%= link_to "View", {:controller => 'response', :action => 'view', :id => @latest_response.id} %>
+                        <% if review_no == 1 %>
+                          <%= " "%>
+                        <% end %>
                     </td>
 
                     <% if @assignment.get_current_stage(topic_id) != "Finished" %>
@@ -64,7 +70,7 @@
 
                         <td>
                           <%- # If review is not submitted (is still being edited), show an 'Edit' link. -%>
-                          <% if !@latest_response.is_submitted %>
+                          <% unless @latest_response.is_submitted %>
                               <%= link_to "Edit", {:controller => 'response', :action => 'edit', :id => @latest_response.id} %>
 
                           <%- # If the submission has been updated since it was last reviewed, show an 'Update' link-%>
