--- a/app/views/import_file/start.html.erb
+++ b/app/views/import_file/start.html.erb
@@ -31,7 +31,7 @@
         </td>
       </tr>
 
-      <% if @model == 'SignUpTopic' %>
+      <% if @model == 'SignUpSheet' %>
 
           <tr><td><br/></td></tr>
 
